[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/InputBind/EventDialog.gd" type="Script" id=1]
[ext_resource path="res://addons/InputBind/theme/panel/popup.tres" type="StyleBox" id=2]
[ext_resource path="res://addons/InputBind/theme/optionButton/option.tres" type="StyleBox" id=3]
[ext_resource path="res://addons/InputBind/theme/optionButton/option_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://addons/InputBind/theme/btn/btn_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://addons/InputBind/theme/btn/btn_press.tres" type="StyleBox" id=6]
[ext_resource path="res://addons/InputBind/theme/btn/btn_hover.tres" type="StyleBox" id=7]

[node name="eventDialog" type="PopupPanel"]
margin_right = 352.0
margin_bottom = 128.0
custom_styles/panel = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 350.0
margin_bottom = 134.0
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 348.0
margin_bottom = 14.0
size_flags_vertical = 6
text = "Press a key "
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 348.0
margin_bottom = 42.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_right = 338.0
margin_bottom = 24.0
align = 1
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="btnContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 348.0
margin_bottom = 86.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/btnContainer3"]
margin_left = 10.0
margin_right = 338.0
margin_bottom = 40.0

[node name="labelBox" type="HBoxContainer" parent="VBoxContainer/btnContainer3/VBoxContainer"]
margin_right = 328.0
margin_bottom = 14.0
size_flags_vertical = 6

[node name="Label" type="Label" parent="VBoxContainer/btnContainer3/VBoxContainer/labelBox"]
margin_right = 108.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "device"

[node name="name" type="Label" parent="VBoxContainer/btnContainer3/VBoxContainer/labelBox"]
margin_left = 112.0
margin_right = 328.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "name"

[node name="btnBox" type="HBoxContainer" parent="VBoxContainer/btnContainer3/VBoxContainer"]
margin_top = 18.0
margin_right = 328.0
margin_bottom = 40.0
size_flags_vertical = 6

[node name="deviceID" type="OptionButton" parent="VBoxContainer/btnContainer3/VBoxContainer/btnBox"]
margin_right = 108.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )

[node name="optionButton" type="OptionButton" parent="VBoxContainer/btnContainer3/VBoxContainer/btnBox"]
margin_left = 112.0
margin_right = 328.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 348.0
margin_bottom = 130.0
size_flags_vertical = 6
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 348.0
margin_bottom = 32.0
custom_constants/separation = 10
alignment = 1

[node name="ok" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 156.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "ok"

[node name="cancel" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 166.0
margin_right = 219.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "cancel"

[connection signal="about_to_show" from="." to="." method="_on_eventDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_eventDialog_popup_hide"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/ok" to="." method="_on_eventDialog_confirmed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
